<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
            android:id="@+id/nav_home"
            android:name="youilab.main.ui.evidences.EvidencesFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_evidences">

        <action
                android:id="@+id/action_HomeFragment_to_SurveyFragment"
                app:destination="@id/nav_survey"/>

    </fragment>

    <fragment
            android:id="@+id/nav_survey"
            android:name="youilab.main.ui.evidences.SurveyFragment"
            android:label="@string/home_second"
            tools:layout="@layout/activity_survey">
        <action
                android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
                app:destination="@id/nav_home"/>

        <argument
                android:name="myArg"
                app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="youilab.main.ui.evidences.EvidencesFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_evidences" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="youilab.main.ui.trainings.TrainingsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_trainings" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="youilab.main.ui.avatares.AvataresFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_avatares" />
</navigation>